Converted to a faceted project, added Java facet.

--- a/.classpath
+++ b/.classpath
@@ -1,102 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="JRings/src"/>
-	<classpathentry kind="src" path="JRings/apple"/>
-	<classpathentry kind="src" path="JRings/WEB-INF/lib/cocoa"/>
 	<classpathentry kind="src" path="FeedGrowth/src"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/activation.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/bsh.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-collections-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-httpclient.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-lang-2.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-pool-1.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-transaction-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/commons-xmlio-0.1pre.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/dsn.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/ehcache-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/filterbuilder.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/fobs4jmf.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/geronimo-jta.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/hsqldb.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/htmllexer.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/htmlparser.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/imap.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jakarta-slide-webdavlib-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jaxen-core.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jaxen-jdom.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jdom-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jdom.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jflashplayer.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jgraph.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/jmf.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/junit.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/JYouTube.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/lucene-1.4-final.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/mailapi.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/muse-examples.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/muse.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/PDFBox-0.6.5.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/poi-2.5-final-20040428.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/pop3.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/postgresql-8.1-407.jdbc2.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/sax2.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/saxpath.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-jaas-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-jaas-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-jdk14logger-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-jdk14logger-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-kernel-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-kernel-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-log4jlogger-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-log4jlogger-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-roles-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-roles-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-stores-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-stores-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-webdavservlet-2.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide-webdavservlet-2.2pre1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/slide22.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/smtp.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/thumbelina.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/tm-extractors-0.4.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/xml-im-exporter1.1.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/xpp3.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-appsforyourdomain-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-appsforyourdomain-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-base-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-calendar-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-calendar-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-client-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-client-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-codesearch-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-codesearch-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-contacts-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-contacts-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-core-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-docs-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-docs-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-media-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-photos-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-photos-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-spreadsheet-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-spreadsheet-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-youtube-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/google/gdata/gdata-youtube-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/MIDP/cldcapi11.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/prof/ha26.jar"/>
-	<classpathentry kind="lib" path="JRings/WEB-INF/lib/MIDP/wma20.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="FeedGrowth/lib/jVSTeXamples-1.0beta-javadoc.jar"/>
-	<classpathentry kind="lib" path="FeedGrowth/lib/jVSTsYstem-1.0beta-javadoc.jar"/>
-	<classpathentry kind="lib" path="FeedGrowth/lib/jVSTwRapper-1.0beta-javadoc.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jvst_wrapper"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jvst_system"/>
+	<classpathentry kind="src" path="JRings/iptables"/>
+	<classpathentry kind="src" path="JRings/src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
