--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/jvst_system"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jvst_wrapper"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
