--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/jvst_system"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jvst_wrapper"/>
+	<classpathentry kind="lib" path="FeedGrowth/lib/jogl-all.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
