--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="JRings/src"/>
 	<classpathentry kind="src" path="Rings/src"/>
 	<classpathentry kind="src" path="PhotonField/src"/>
+	<classpathentry kind="src" path="Replicator/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
