--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="src" path="Replicator/rsrc"/>
 	<classpathentry kind="src" path="Explorer/src"/>
 	<classpathentry kind="src" path="Common/src"/>
+	<classpathentry kind="src" path="FlowTree/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
