Added Java 3D jars.

--- a/.classpath
+++ b/.classpath
@@ -149,6 +149,9 @@
 	<classpathentry exported="true" kind="lib" path="Explorer/lib/gt-ysld-15-RC1.jar"/>
 	<classpathentry exported="true" kind="lib" path="Explorer/lib/h2-1.1.119.jar"/>
 	<classpathentry kind="lib" path="Common/lib/jep-2.23.jar"/>
+	<classpathentry kind="lib" path="PhotonField/lib/j3dcore.jar"/>
+	<classpathentry kind="lib" path="PhotonField/lib/j3dutils.jar"/>
+	<classpathentry kind="lib" path="PhotonField/lib/vecmath.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
