--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,7 @@
 	<classpathentry kind="src" path="ThirdParty/src"/>
 	<classpathentry kind="src" path="ThirdParty/iptables"/>
 	<classpathentry kind="src" path="TreeView/src"/>
+	<classpathentry kind="src" path="GraphPersist/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
