--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>Common</artifactId>
     <version>0.2</version>
 
-
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.6</version>
+    </dependency>
 </project>
