--- a/Rings/pom.xml
+++ b/Rings/pom.xml
@@ -5,12 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.almostrealism</groupId>
-    <artifactId>Replicator</artifactId>
+    <artifactId>Rings</artifactId>
     <version>0.1-rc</version>
 
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.6</version>
-    </dependency>
+
 </project>
