More modularizing and dependency organizing.

--- a/Explorer/pom.xml
+++ b/Explorer/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.almostrealism</groupId>
-    <artifactId>GraphPersist</artifactId>
-    <version>0.2</version>
+    <groupId>com.almostrealism</groupId>
+    <artifactId>Explorer</artifactId>
+    <version>0.1-rc</version>
 
     <dependencies>
         <dependency>
-            <groupId>org.almostrealism</groupId>
-            <artifactId>Common</artifactId>
+            <groupId>com.almostrealism</groupId>
+            <artifactId>Rings</artifactId>
         </dependency>
     </dependencies>
 </project>
