More modularizing and dependency organizing, and updated the bitbucket pipeline.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,45 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
-          - cd Common
           - mvn --version
-          - mvn clean install
+    - step:
+            script:
+              - cd Common
+              - mvn --version
+              - mvn clean install
+    - step:
+            script:
+              - cd GraphPersist
+              - mvn clean install
+    - step:
+            script:
+              - cd TreeView
+              - mvn clean install
+    - step:
+            script:
+              - cd MatrixView
+              - mvn clean install
+    - step:
+            script:
+              - cd FlowTree
+              - mvn clean install
+    - step:
+            script:
+              - cd Rings
+              - mvn clean install
+    - step:
+            script:
+              - cd PhotonField
+              - mvn clean install
+    - step:
+            script:
+              - cd Explorer
+              - mvn clean install
+    - step:
+            script:
+              - cd Replicator
+              - mvn clean install
+      - step:
+              script:
+                - cd FeedGrowth
+                - mvn clean install
