--- a/MatrixView/pom.xml
+++ b/MatrixView/pom.xml
@@ -4,14 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.almostrealism</groupId>
-    <artifactId>FlowTree</artifactId>
-    <version>0.2</version>
+    <groupId>io.almostrealism</groupId>
+    <artifactId>MatrixView</artifactId>
+    <version>0.1-rc</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.almostrealism</groupId>
-            <artifactId>Common</artifactId>
-        </dependency>
-    </dependencies>
+
 </project>
