--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -12,6 +12,7 @@
         <dependency>
             <groupId>org.almostrealism</groupId>
             <artifactId>Common</artifactId>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 </project>
