--- a/PhotonField/pom.xml
+++ b/PhotonField/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.almostrealism</groupId>
-    <artifactId>Replicator</artifactId>
+    <artifactId>PhotonField</artifactId>
     <version>0.1-rc</version>
 
     <dependencies>
