--- a/FeedGrowth/pom.xml
+++ b/FeedGrowth/pom.xml
@@ -12,6 +12,7 @@
         <dependency>
             <groupId>com.almostrealism</groupId>
             <artifactId>Replicator</artifactId>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 </project>
