--- a/.classpath
+++ b/.classpath
@@ -160,6 +160,8 @@
 	<classpathentry kind="lib" path="PhotonField/lib/j3dutils.jar"/>
 	<classpathentry kind="lib" path="PhotonField/lib/vecmath.jar"/>
 	<classpathentry kind="lib" path="Common/lib/trove-3.0.3.jar"/>
+	<classpathentry kind="lib" path="GraphPersist/lib/c3p0-0.9.5.2.jar"/>
+	<classpathentry kind="lib" path="GraphPersist/lib/commons-pool2-2.3.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgraph"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgrapht-jdk1.5"/>
