--- a/Rings/pom.xml
+++ b/Rings/pom.xml
@@ -7,4 +7,17 @@
     <groupId>com.almostrealism</groupId>
     <artifactId>Rings</artifactId>
     <version>0.1-rc</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jogamp.gluegen</groupId>
+            <artifactId>gluegen-rt-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl-all-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+    </dependencies>
 </project>
