--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,7 @@
 	<classpathentry kind="src" path="Rings/src"/>
 	<classpathentry kind="src" path="RingsDesktop/src"/>
 	<classpathentry kind="src" path="TreeView/src"/>
+	<classpathentry kind="src" path="GraphPersist/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
