--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -14,5 +14,11 @@
             <artifactId>Common</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
