We'll see if bitbucket supports the maven dependency copy operation.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,8 @@ pipelines:
           # Common
           - mvn --version
           - cd Common/src
+          - mvn dependency:copy-dependencies
+          - cd src
           - find -name "*.java" > sources.txt
           - javac @sources.txt
           - cd ../
