List the directory contents of the target folder that should be created by maven dependency copying.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
           - mvn --version
           - cd Common
           - mvn dependency:copy-dependencies
+          - ls target
           - cd src
           - find -name "*.java" > sources.txt
           - javac @sources.txt
