--- a/RingsDesktop/pom.xml
+++ b/RingsDesktop/pom.xml
@@ -14,5 +14,19 @@
             <artifactId>Rings</artifactId>
             <version>LATEST</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.sun.media/jai_imageio -->
+		<dependency>
+		    <groupId>com.sun.media</groupId>
+		    <artifactId>jai_imageio</artifactId>
+		    <version>1.1</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.sun.media/jai_codec -->
+		<dependency>
+		    <groupId>com.sun.media</groupId>
+		    <artifactId>jai_codec</artifactId>
+		    <version>1.1.2_01</version>
+		</dependency>
     </dependencies>
 </project>
