--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,9 +18,20 @@ pipelines:
           - cd ../
           - mvn clean install
           
-          # GraphPersist
+          
+          # GraphPersist Dependencies
+          - mvn --version
           - cd ../GraphPersist
+          - mvn dependency:copy-dependencies
+          
+          # GraphPersist Compile
+          - mkdir target/classes
+          - cd src
+          - find -name "*.java" > sources.txt
+          - javac -cp "../target/dependency/*" -d ../target/classes @sources.txt
+          - cd ../
           - mvn clean install
+          
           
           # TreeView
           - cd ../TreeView
