GraphPersist depends on C3P0.

--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -14,6 +14,14 @@
             <artifactId>Common</artifactId>
             <version>LATEST</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+		<dependency>
+		    <groupId>c3p0</groupId>
+		    <artifactId>c3p0</artifactId>
+		    <version>RELEASE</version>
+		</dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
