--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.almostrealism</groupId>
-    <artifactId>GraphPersist</artifactId>
-    <version>0.2</version>
+	<groupId>io.almostrealism</groupId>
+	<artifactId>GraphPersist</artifactId>
+	<version>0.2</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.almostrealism</groupId>
-            <artifactId>Common</artifactId>
-            <version>LATEST</version>
-        </dependency>
-        
-        <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+	<dependencies>
 		<dependency>
-		    <groupId>c3p0</groupId>
-		    <artifactId>c3p0</artifactId>
-		    <version>RELEASE</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>Common</artifactId>
+			<version>LATEST</version>
 		</dependency>
-        
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+
+		<!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
