--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -47,9 +47,18 @@ pipelines:
           - mvn install
           
           
-          # MatrixView
+          # MatrixView Dependencies
           - cd ../MatrixView
+          - mvn dependency:copy-dependencies
+          
+          # MatrixView Compile
+          - mkdir target/classes
+          - cd src
+          - find -name "*.java" > sources.txt
+          - javac -cp "../target/dependency/*" -d ../target/classes @sources.txt
+          - cd ../
           - mvn install
+          
           
           # FlowTree
           - cd ../FlowTree
