Common package had the wrong version number and MatrixView needs to depend on Common.

--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.almostrealism</groupId>
     <artifactId>Common</artifactId>
-    <version>0.2</version>
+    <version>0.1-rc</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
