--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -60,9 +60,18 @@ pipelines:
           - mvn install
           
           
-          # FlowTree
+          # FlowTree Dependencies
           - cd ../FlowTree
+          - mvn dependency:copy-dependencies
+          
+          # FlowTree Compile
+          - mkdir target/classes
+          - cd src
+          - find -name "*.java" > sources.txt
+          - javac -cp "../target/dependency/*" -d ../target/classes @sources.txt
+          - cd ../
           - mvn install
+          
           
           # Rings
           - cd ../Rings
