--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -81,6 +81,20 @@ pipelines:
           - cd ../PhotonField
           - mvn install
           
+          
+          # ArtifactDetector Dependencies
+          - cd ../FlowTree
+          - mvn dependency:copy-dependencies
+          
+          # ArtifactDetector Compile
+          - mkdir target/classes
+          - cd src
+          - find -name "*.java" > sources.txt
+          - javac -cp "../target/dependency/*" -d ../target/classes @sources.txt
+          - cd ../
+          - mvn install
+          
+          
           # Explorer
           - cd ../Explorer
           - mvn install
