FlowTree depends on JSch.

--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -13,5 +13,12 @@
 			<artifactId>Common</artifactId>
 			<version>LATEST</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.53</version>
+		</dependency>
 	</dependencies>
 </project>
