Use try-with-resources and remove some dependencies that we cannot resolve (such as slide).

--- a/.classpath
+++ b/.classpath
@@ -164,6 +164,7 @@
 	<classpathentry kind="lib" path="GraphPersist/lib/commons-pool2-2.3.jar"/>
 	<classpathentry kind="lib" path="Common/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="Common/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="FlowTree/lib/jsch-0.1.53.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgraph"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgrapht-jdk1.5"/>
