GraphPersist is at version 0.1-rc.

--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.almostrealism</groupId>
 	<artifactId>GraphPersist</artifactId>
-	<version>0.2</version>
+	<version>0.1-rc</version>
 
 	<dependencies>
 		<dependency>
