--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -14,6 +14,12 @@
 			<version>LATEST</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>io.almostrealism</groupId>
+			<artifactId>TreeView</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
 		<dependency>
 			<groupId>com.jcraft</groupId>
