--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -23,7 +23,7 @@
 		<!-- https://mvnrepository.com/artifact/javax.media/jai_core -->
 		<dependency>
 			<groupId>javax.media</groupId>
-			<artifactId>jai_core</artifactId>
+			<artifactId>jai-core</artifactId>
 			<version>1.1.3</version>
 		</dependency>
 
