--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -26,5 +26,13 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/hsqldb/hsqldb -->
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>1.8.0.10</version>
+		</dependency>
+
 	</dependencies>
 </project>
