--- a/.classpath
+++ b/.classpath
@@ -165,6 +165,32 @@
 	<classpathentry kind="lib" path="Common/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="Common/lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="FlowTree/lib/jsch-0.1.53.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-android-aarch64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-android-armv6.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-linux-armv6.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-linux-armv6hf.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-solaris-amd64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-solaris-i586.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-2.3.2.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/gluegen-rt-main-2.3.2.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-android-aarch64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-android-armv6.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-linux-armv6.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-linux-armv6hf.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-solaris-amd64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-solaris-i586.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-2.3.2.jar"/>
+	<classpathentry kind="lib" path="Rings/lib/jogl-all-main-2.3.2.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgraph"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgrapht-jdk1.5"/>
