--- a/Explorer/pom.xml
+++ b/Explorer/pom.xml
@@ -11,7 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>com.almostrealism</groupId>
-            <artifactId>Rings</artifactId>
+            <artifactId>Replicator</artifactId>
             <version>LATEST</version>
         </dependency>
     </dependencies>
