Explorer depends on JEP.

--- a/Explorer/pom.xml
+++ b/Explorer/pom.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.almostrealism</groupId>
-    <artifactId>Explorer</artifactId>
-    <version>0.1-rc</version>
+	<groupId>com.almostrealism</groupId>
+	<artifactId>Explorer</artifactId>
+	<version>0.1-rc</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.almostrealism</groupId>
-            <artifactId>Replicator</artifactId>
-            <version>LATEST</version>
-        </dependency>
-    </dependencies>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.almostrealism</groupId>
+			<artifactId>Replicator</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/jep/jep -->
+		<dependency>
+			<groupId>jep</groupId>
+			<artifactId>jep</artifactId>
+			<version>2.24</version>
+		</dependency>
+	</dependencies>
 </project>
