--- a/Explorer/pom.xml
+++ b/Explorer/pom.xml
@@ -21,5 +21,11 @@
 			<artifactId>jep</artifactId>
 			<version>2.24</version>
 		</dependency>
+		
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 	</dependencies>
 </project>
