--- a/Replicator/pom.xml
+++ b/Replicator/pom.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.almostrealism</groupId>
-    <artifactId>Replicator</artifactId>
-    <version>0.1-rc</version>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.almostrealism</groupId>
-            <artifactId>Rings</artifactId>
-            <version>LATEST</version>
-        </dependency>
-    </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	
+	<groupId>com.almostrealism</groupId>
+	<artifactId>Replicator</artifactId>
+	<version>0.1-rc</version>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.almostrealism</groupId>
+			<artifactId>OptimalZoo</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		<dependency>
+			<groupId>com.almostrealism</groupId>
+			<artifactId>Rings</artifactId>
+			<version>LATEST</version>
+		</dependency>
+	</dependencies>
 </project>
