--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -73,6 +73,19 @@ pipelines:
           - mvn install
           
           
+          # OptimalZoo Dependencies
+          - cd ../OptimalZoo
+          - mvn dependency:copy-dependencies
+          
+          # OptimalZoo Compile
+          - mkdir target/classes
+          - cd src
+          - find -name "*.java" > sources.txt
+          - javac -cp "../target/dependency/*" -d ../target/classes @sources.txt
+          - cd ../
+          - mvn install
+          
+          
           # Rings Dependencies
           - cd ../Rings
           - mvn dependency:copy-dependencies
