--- a/.classpath
+++ b/.classpath
@@ -195,6 +195,12 @@
 	<classpathentry kind="lib" path="GraphPersist/lib/slf4j-log4j12-1.6.6.jar"/>
 	<classpathentry kind="lib" path="GraphPersist/lib/slf4j-api-1.7.7.jar"/>
 	<classpathentry kind="lib" path="FeedGrowth/lib/com.cycling74.max-5.1.9.jar"/>
+	<classpathentry kind="lib" path="PromotionManager/lib/dsn.jar"/>
+	<classpathentry kind="lib" path="PromotionManager/lib/gimap.jar"/>
+	<classpathentry kind="lib" path="PromotionManager/lib/imap.jar"/>
+	<classpathentry kind="lib" path="PromotionManager/lib/mailapi.jar"/>
+	<classpathentry kind="lib" path="PromotionManager/lib/pop3.jar"/>
+	<classpathentry kind="lib" path="PromotionManager/lib/smtp.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgraph"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgrapht-jdk1.5"/>
